# ChangeLog for xfce-base/libxfce4ui
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4ui/ChangeLog,v 1.34 2012/03/30 20:29:58 ssuominen Exp $

*libxfce4ui-4.9.1 (30 Mar 2012)

  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +libxfce4ui-4.9.1.ebuild:
  Version bump to development series.

  23 Mar 2012; Christoph Mende <angelos@gentoo.org> libxfce4ui-4.8.1.ebuild,
  libxfce4ui-4.9.0.ebuild:
  Add slot dep on glib

*libxfce4ui-4.9.0 (20 Feb 2012)

  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> +libxfce4ui-4.9.0.ebuild:
  Version bump to development series.

  13 Feb 2012; Markus Meier <maekke@gentoo.org> libxfce4ui-4.8.1.ebuild:
  arm stable, bug #401229

  10 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> libxfce4ui-4.8.1.ebuild:
  ppc/ppc64/x86 stable wrt #401229

  09 Feb 2012; Jeroen Roovers <jer@gentoo.org> libxfce4ui-4.8.1.ebuild:
  Stable for HPPA (bug #401229).

  30 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libxfce4ui-4.8.1.ebuild:
  Stable for amd64, wrt bug #401229

  06 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  -libxfce4ui-4.8.0-r1.ebuild,
  -files/libxfce4ui-4.8.0-keyboard-shortcuts.patch:
  old

*libxfce4ui-4.8.1 (27 Dec 2011)

  27 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +libxfce4ui-4.8.1.ebuild,
  +files/libxfce4ui-4.8.1-keyboard-shortcuts.patch:
  Version bump. Use upstream patch for XF86WWW and XF86Mail keyboard shortcuts.

*libxfce4ui-4.8.0-r1 (11 Dec 2011)

  11 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
  +libxfce4ui-4.8.0-r1.ebuild,
  +files/libxfce4ui-4.8.0-keyboard-shortcuts.patch, metadata.xml:
  Introduce Fedora patch for extra keyboard shortcuts wrt #392001 by "Rion"

  20 May 2011; Fabian Groffen <grobian@gentoo.org> libxfce4ui-4.8.0.ebuild:
  Add --disable-visibility on Darwin, bug #366857

  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> libxfce4ui-4.8.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #349053
