@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/libxfce4ui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4ui/ChangeLog,v 1.34 2012/03/30 20:29:58 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4ui/ChangeLog,v 1.35 2012/03/30 20:31:08 ssuominen Exp $
+
+  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -libxfce4ui-4.9.0.ebuild:
+  old
 
 *libxfce4ui-4.9.1 (30 Mar 2012)
 
